package Controllers;

public class ControleJogoUsuario {
    
}
